--- a/fleures.html
+++ b/fleures.html
@@ -6,7 +6,7 @@
 		<link rel="icon" type="image/png" sizes="32x32" href="/assets/img/favicon-32x32.png">
 		<link rel="icon" type="image/png" sizes="192x192"  href="/assets/img/android-icon-192x192.png">
 		<meta name="theme-color" content="#FFFFFF">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
+		<meta name="viewport" content="width=600" />
 		<link rel="stylesheet" href="/assets/css/style.css" />
 	</head>
 	<body>
@@ -28,5 +28,6 @@
 				</section>
 			</div>
 		</div>
+		<script src="/assets/js/index.js"></script>
 	</body>
 </html>
