--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 		<link rel="stylesheet" href="/assets/css/style.css" />
 	</head>
 	<body>
-		<header><a href="/">Antonia Thompson</a></header>
+		<header>
+			<a class="logo" href="/">Antonia Thompson</a>
+		</header>
 		<div class="main">
 			<div class="gradient"></div>
 			<div id="include" class="home">
