change thumb & renaming files

--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<p><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 	<head>
 		<title>Antonia Thompson</title>
@@ -12,22 +12,13 @@
 	<body>
 		<header>
 			<a class="logo" href="/">Antonia Thompson</a>
+			<a class="cv" href="cv.html">CV</a>
+			<a class="contact" href="contact.html"> Contact</a>
 		</header>
 		<div class="main">
 			<div class="gradient"></div>
 			<div class="page" id="include">
-				<section id="page-1">
-					<img src="/assets/img/pages/fleures_1.png" />
-				</section>
-				<section id="page-2">
-					<img src="/assets/img/pages/fleures_2.png" />
-				</section>
-				<section id="page-3">
-					<img src="/assets/img/pages/fleures_3.png" />
-				</section>
-				<section id="page-4">
-					<img src="/assets/img/pages/fleures_4.png" />
-				</section>
+				<p> bibu</p>
 			</div>
 		</div>
 		<script src="/assets/js/index.js"></script>
