--- a/fleurs.html
+++ b/fleurs.html
@@ -1,4 +1,4 @@
-<p><!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
 	<head>
 		<title>Antonia Thompson</title>
@@ -13,12 +13,23 @@
 		<header>
 			<a class="logo" href="/">Antonia Thompson</a>
 			<a class="cv" href="cv.html">CV</a>
-			<a class="about" href="about.html"> About</a>
+			<a class="contact" href="contact.html"> Contact</a>
 		</header>
 		<div class="main">
 			<div class="gradient"></div>
 			<div class="page" id="include">
-				<p> bibu</p>
+				<section id="page-1">
+					<img src="/assets/img/pages/fleurs_1.png" />
+				</section>
+				<section id="page-2">
+					<img src="/assets/img/pages/fleurs_2.png" />
+				</section>
+				<section id="page-3">
+					<img src="/assets/img/pages/fleurs_3.png" />
+				</section>
+				<section id="page-4">
+					<img src="/assets/img/pages/fleurs_4.png" />
+				</section>
 			</div>
 		</div>
 		<script src="/assets/js/index.js"></script>
