--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 	<body>
 		<header>
 			<a class="logo" href="/">Antonia Thompson</a>
-			<a class="cv" href="cv.html">CV</a>
-			<a class="about" href="about.html">About</a>
+            <a class="cv" href="cv.html">CV</a>
+			<a class="contact" href="contact.html"> Contact</a>
 		</header>
 		<div class="main">
 			<div class="gradient"></div>
@@ -28,20 +28,20 @@
 					<section class="bibu-3">
 						<a class="bubble" href="/bibu.html#page-4" data-x="1612" data-y="1559" data-width="2481" data-height="1754"></a>
 					</section>
-					<section class="fleures-1">
-						<a class="bubble" href="/fleures.html#page-1" data-x="2054" data-y="1256" data-width="2481" data-height="1754"></a>
+					<section class="fleurs-1">
+						<a class="bubble" href="/fleurs.html#page-1" data-x="2054" data-y="1256" data-width="2481" data-height="1754"></a>
 					</section>
-					<section class="fleures-2">
-						<a class="bubble" href="/fleures.html#page-2" data-x="1212" data-y="1514" data-width="2481" data-height="1754"></a>
+					<section class="fleurs-2">
+						<a class="bubble" href="/fleurs.html#page-2" data-x="1212" data-y="1514" data-width="2481" data-height="1754"></a>
 					</section>
-					<section class="fleures-3">
-						<a class="bubble" href="/fleures.html#page-3" data-x="1267" data-y="277" data-width="2481" data-height="1754"></a>
+					<section class="fleurs-3">
+						<a class="bubble" href="/fleurs.html#page-3" data-x="1267" data-y="277" data-width="2481" data-height="1754"></a>
 					</section>
-					<section class="fleures-4">
-						<a class="bubble" href="/fleures.html#page-4" data-x="1153" data-y="804" data-width="2481" data-height="1754"></a>
+					<section class="fleurs-4">
+						<a class="bubble" href="/fleurs.html#page-4" data-x="1153" data-y="804" data-width="2481" data-height="1754"></a>
 					</section>
 					<section class="nawak-1">
-						<a class="bubble" href="/nawak.html#page-1" data-x="920" data-y="802" data-width="2481" data-height="1754"></a>
+						<a class="bubble" href="/nawak.html#page-1" data-x="887" data-y="137" data-width="2481" data-height="1754"></a>
 					</section>
 					<section class="nawak-2">
 						<a class="bubble" href="/nawak.html#page-2" data-x="1886" data-y="632" data-width="2481" data-height="1754"></a>
