--- a/taches.html
+++ b/taches.html
@@ -12,6 +12,8 @@
 	<body>
 		<header>
 			<a class="logo" href="/">Antonia Thompson</a>
+			<a class="cv" href="cv.html">CV</a>
+			<a class="contact" href="contact.html"> Contact</a>
 		</header>
 		<div class="main">
 			<div class="gradient"></div>
