--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,14 @@
 		</header>
 		<div class="main">
 			<div class="gradient"></div>
-			<div class="page" id="include">
-                
-				<p> bibu</p>
+			<div class="page contact" id="include">
+                <div class="form">
+                    
+                    <!-- www.123contactform.com script begins here -->
+                    <script type="text/javascript" defer src="//www.123contactform.com/embed/2828812.js" data-role="form" data-default-width="650px"></script>
+                    <p>Powered by <a class="footerLink13" title="123ContactForm" href="http://www.123contactform.com">123ContactForm</a></p><!-- www.123contactform.com script ends here -->
+
+				</div>		
 			</div>
 		</div>
 		<script src="/assets/js/index.js"></script>
