changed index and sections

--- a/index.html
+++ b/index.html
@@ -19,57 +19,69 @@
 			<div class="gradient"></div>
 			<div id="include" class="home">
 				<div class="sections">
-					<section class="bibu-1">
-						<a class="bubble" href="/bibu.html#page-1" data-x="193" data-y="718" data-width="2481" data-height="1754"></a>
-					</section>
-					<section class="bibu-2">
-						<a class="bubble" href="/bibu.html#page-2" data-x="1888" data-y="417" data-width="2481" data-height="1754"></a>
-					</section>
-					<section class="bibu-3">
-						<a class="bubble" href="/bibu.html#page-4" data-x="1612" data-y="1559" data-width="2481" data-height="1754"></a>
-					</section>
-					<section class="fleurs-1">
-						<a class="bubble" href="/fleurs.html#page-1" data-x="2054" data-y="1256" data-width="2481" data-height="1754"></a>
-					</section>
-					<section class="fleurs-2">
-						<a class="bubble" href="/fleurs.html#page-2" data-x="1212" data-y="1514" data-width="2481" data-height="1754"></a>
-					</section>
-					<section class="fleurs-3">
-						<a class="bubble" href="/fleurs.html#page-3" data-x="1267" data-y="277" data-width="2481" data-height="1754"></a>
-					</section>
-					<section class="fleurs-4">
-						<a class="bubble" href="/fleurs.html#page-4" data-x="1153" data-y="804" data-width="2481" data-height="1754"></a>
-					</section>
-					<section class="nawak-1">
-						<a class="bubble" href="/nawak.html#page-1" data-x="885" data-y="125" data-width="1200" data-height="848"></a>
-					</section>
-					<section class="nawak-2">
-						<a class="bubble" href="/nawak.html#page-2" data-x="1886" data-y="632" data-width="2481" data-height="1754"></a>
-					</section>
-					<section class="nawak-3">
-						<a class="bubble" href="/nawak.html#page-3" data-x="364" data-y="724" data-width="2481" data-height="1754"></a>
-					</section>
-					<section class="oiseau">
-						<a class="bubble" href="/oiseau.html" data-x="1194" data-y="1165" data-width="2481" data-height="1754"></a>
-					</section>
-					<section class="taches-1">
-						<a class="bubble" href="/taches.html#page-1" data-x="1281" data-y="1012" data-width="2481" data-height="1754"></a>
-					</section>
-					<section class="taches-2">
-						<a class="bubble" href="/taches.html#page-2" data-x="2049" data-y="595" data-width="2481" data-height="1754"></a>
-					</section>
-					<section class="taches-3">
-						<a class="bubble" href="/taches.html#page-3" data-x="286" data-y="1001" data-width="2481" data-height="1754"></a>
-					</section>
-					<section class="ville-1">
-						<a class="bubble" href="/ville.html#page-1" data-x="369" data-y="749" data-width="2481" data-height="1754"></a>
+                    <div>
+                        <section class="bibu-1">
+                            <a class="bubble" href="/bibu.html#page-1" data-x="193" data-y="718" data-width="2481" data-height="1754"></a>
+                        </section>
+                        <section class="bibu-2">
+                            <a class="bubble" href="/bibu.html#page-2" data-x="1888" data-y="417" data-width="2481" data-height="1754"></a>
+                        </section>
+                        <section class="bibu-3">
+                            <a class="bubble" href="/bibu.html#page-4" data-x="1612" data-y="1559" data-width="2481" data-height="1754"></a>
+                        </section>
+                    </div>
+                    <div>
+                        <section class="fleurs-1">
+                            <a class="bubble" href="/fleurs.html#page-1" data-x="2054" data-y="1256" data-width="2481" data-height="1754"></a>
+                        </section>
+                        <section class="fleurs-2">
+                            <a class="bubble" href="/fleurs.html#page-2" data-x="1212" data-y="1514" data-width="2481" data-height="1754"></a>
+                        </section>
+                        <section class="fleurs-3">
+                            <a class="bubble" href="/fleurs.html#page-3" data-x="1267" data-y="277" data-width="2481" data-height="1754"></a>
+                        </section>
+                    </div>
+                    <div>
+                        <section class="fleurs-4">
+                            <a class="bubble" href="/fleurs.html#page-4" data-x="1153" data-y="804" data-width="2481" data-height="1754"></a>
+                        </section>
+                        <section class="oiseau">
+                            <a class="bubble" href="/oiseau.html" data-x="1194" data-y="1165" data-width="2481" data-height="1754"></a>
+					   </section>
+                    </div>
+                    <div>
+                        <section class="nawak-1">
+						  <a class="bubble" href="/nawak.html#page-1" data-x="885" data-y="125" data-width="1200" data-height="848"></a>
+					   </section>
+					   <section class="nawak-2">
+						  <a class="bubble" href="/nawak.html#page-2" data-x="1886" data-y="632" data-width="2481" data-height="1754"></a>
+					   </section>
+					   <section class="nawak-3">
+						  <a class="bubble" href="/nawak.html#page-3" data-x="364" data-y="724" data-width="2481" data-height="1754"></a>
+					   </section>
+                    </div>
+                    <div>
+					   <section class="taches-1">
+						  <a class="bubble" href="/taches.html#page-1" data-x="1281" data-y="1012" data-width="2481" data-height="1754"></a>
+					   </section>
+					   <section class="taches-2">
+						  <a class="bubble" href="/taches.html#page-2" data-x="2049" data-y="595" data-width="2481" data-height="1754"></a>
+					   </section>
+					   <section class="taches-3">
+						  <a class="bubble" href="/taches.html#page-3" data-x="286" data-y="1001" data-width="2481" data-height="1754"></a>
+					   </section>
+                    </div>
+                    <div>
+					   <section class="ville-1">
+						  <a class="bubble" href="/ville.html#page-1" data-x="369" data-y="749" data-width="2481" data-height="1754"></a>
 					</section>
 					<section class="ville-2">
 						<a class="bubble" href="/ville.html#page-2" data-x="820" data-y="1313" data-width="2481" data-height="1754"></a>
 					</section>
+                    </div>
 				</div>
 			</div>
-		</diV>
+		</div>
 		<script src="/assets/js/index.js"></script>
 	</body>
 </html>
