changed page order

--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
                     </div>
                     <div>
                         <section class="fleurs-4">
-                            <a class="bubble" href="/fleurs.html#page-4" data-x="1153" data-y="804" data-width="2481" data-height="1754"></a>
+                            <a class="bubble" href="/oiseau.html#page-1" data-x="1153" data-y="804" data-width="2481" data-height="1754"></a>
                         </section>
                         <section class="oiseau">
-                            <a class="bubble" href="/oiseau.html" data-x="1194" data-y="1165" data-width="2481" data-height="1754"></a>
+                            <a class="bubble" href="/oiseau.html#page-2" data-x="1194" data-y="1165" data-width="2481" data-height="1754"></a>
 					   </section>
                     </div>
                     <div>
