--- a/oiseau.html
+++ b/oiseau.html
@@ -18,7 +18,10 @@
 		<div class="main">
 			<div class="gradient"></div>
 			<div class="page" id="include">
-				<section id="page-1">
+                <section id="page-1">
+					<img src="/assets/img/pages/fleurs_4.png" />
+				</section>
+				<section id="page-2">
 					<img src="/assets/img/pages/oiseau.png" />
 				</section>
 			</div>
