--- a/cv.html
+++ b/cv.html
@@ -27,7 +27,9 @@
                         <p>Internship at POLYPHEME for six months, a trend agency in Paris, as a fashion designer's assistant, participated in the preparation of the Première Vision Leather forum (elaboration of trend thematics, moodboard research, selecting fabrics and textures, fabricating objects and accessories, participating in the filming of the short films for the trend gallery, translation of texts).</p>
 
                         <p>Responsable for the creation and realisation of animated films for the Shoe Focus trend gallery  (Première Vision Accessories), graphic design and video work </p>
-
+                        <h2> 2014-present:</h2>
+                        <p>Assistant and helpdesk for ponctual and temporary missions (Avenir RH agency)</p>
+                        
                         <h2>2014 :</h2>
                         <p>Internship for 2 months at On Aura Tout Vu (fashion house), studio assistant (sewing, embroidery and pattern-making).</p>
 
