--- a/ville.html
+++ b/ville.html
@@ -27,5 +27,14 @@
 			</div>
 		</div>
 		<script src="/assets/js/index.js"></script>
+        <script async src="https://www.googletagmanager.com/gtag/js?id=UA-113595735-1"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+
+          gtag('config', 'UA-113595735-1');
+        </script>
 	</body>
+    
 </html>
